--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -513,8 +513,8 @@
    <widget class="QPushButton" name="TempDataButtom">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>570</y>
+      <x>910</x>
+      <y>640</y>
       <width>121</width>
       <height>41</height>
      </rect>
@@ -528,12 +528,115 @@
      <rect>
       <x>370</x>
       <y>620</y>
-      <width>341</width>
+      <width>171</width>
       <height>51</height>
      </rect>
     </property>
     <property name="text">
      <string>Calibration</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="CalButton">
+    <property name="geometry">
+     <rect>
+      <x>550</x>
+      <y>620</y>
+      <width>161</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>PushButton</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="mergeButton">
+    <property name="geometry">
+     <rect>
+      <x>210</x>
+      <y>670</y>
+      <width>75</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Merge3</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="pushButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>460</y>
+      <width>151</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Load QTemp</string>
+    </property>
+   </widget>
+   <widget class="QSlider" name="RSlider1">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>390</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="RSlider2">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>390</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="RSlider3">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>520</y>
+      <width>161</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="RSlider4">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>520</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="maximum">
+     <number>255</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
     </property>
    </widget>
   </widget>
@@ -543,7 +646,7 @@
      <x>0</x>
      <y>0</y>
      <width>1074</width>
-     <height>22</height>
+     <height>21</height>
     </rect>
    </property>
   </widget>
