--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1074</width>
-    <height>763</height>
+    <width>1123</width>
+    <height>766</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -443,7 +443,7 @@
     <property name="geometry">
      <rect>
       <x>730</x>
-      <y>410</y>
+      <y>470</y>
       <width>160</width>
       <height>120</height>
      </rect>
@@ -459,7 +459,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>410</y>
+      <y>470</y>
       <width>160</width>
       <height>120</height>
      </rect>
@@ -508,19 +508,6 @@
     </property>
     <property name="text">
      <string>Show</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="TempDataButtom">
-    <property name="geometry">
-     <rect>
-      <x>910</x>
-      <y>640</y>
-      <width>121</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>Load_temp_data</string>
     </property>
    </widget>
    <widget class="QPushButton" name="CalibrationButton">
@@ -611,7 +598,7 @@
     <property name="geometry">
      <rect>
       <x>730</x>
-      <y>520</y>
+      <y>580</y>
       <width>161</width>
       <height>22</height>
      </rect>
@@ -627,7 +614,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>520</y>
+      <y>580</y>
       <width>160</width>
       <height>22</height>
      </rect>
@@ -669,7 +656,7 @@
     <property name="geometry">
      <rect>
       <x>730</x>
-      <y>540</y>
+      <y>450</y>
       <width>73</width>
       <height>16</height>
      </rect>
@@ -682,7 +669,7 @@
     <property name="geometry">
      <rect>
       <x>900</x>
-      <y>540</y>
+      <y>450</y>
       <width>73</width>
       <height>16</height>
      </rect>
@@ -691,13 +678,77 @@
      <string>CheckBox</string>
     </property>
    </widget>
+   <widget class="QSlider" name="Filter1">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>420</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>99</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="Filter2">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>420</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>99</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="Filter3">
+    <property name="geometry">
+     <rect>
+      <x>730</x>
+      <y>610</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>99</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
+   <widget class="QSlider" name="Filter4">
+    <property name="geometry">
+     <rect>
+      <x>900</x>
+      <y>610</y>
+      <width>160</width>
+      <height>22</height>
+     </rect>
+    </property>
+    <property name="value">
+     <number>99</number>
+    </property>
+    <property name="orientation">
+     <enum>Qt::Horizontal</enum>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1074</width>
+     <width>1123</width>
      <height>21</height>
     </rect>
    </property>
