--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -755,6 +755,19 @@
      <string>Test Show</string>
     </property>
    </widget>
+   <widget class="QLabel" name="Camera">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>670</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>TextLabel</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menuBar">
    <property name="geometry">
